--- a/index.html
+++ b/index.html
@@ -9,22 +9,30 @@
   </head>
   <body>
     <div class="application">
+      <!-- top header -->
+      <div class="top-header">
+        <p>
+          free shopping on your first order and order over 500$<a href=""
+            >click here to see details</a
+          >
+        </p>
+      </div>
       <!-- main -->
       <main role="main" class="main">
         <div class="container">
-            <div class="banner-section">
-                <img src="https://via.placeholder.com/1000x600" />
-    
-                <div class="banner-caption">
-                  <h2>Cleanse</h2>
-                  <h3>Drink Yoursef Clean</h3>
-                  <p>
-                    You Like those cupcakes? sweet-spot for the whiskey neat? We get
-                    it. Time to cleanse.
-                  </p>
-                  <a href="#" class="btn-link">Shop cleanses</a>
-                </div>
-              </div>
+          <div class="banner-section">
+            <img src="https://via.placeholder.com/1000x600" />
+
+            <div class="banner-caption">
+              <h2>Cleanse</h2>
+              <h3>Drink Yoursef Clean</h3>
+              <p>
+                You Like those cupcakes? sweet-spot for the whiskey neat? We get
+                it. Time to cleanse.
+              </p>
+              <a href="#" class="btn-link">Shop cleanses</a>
+            </div>
+          </div>
           <div class="location-section">
             <h3>Locations</h3>
             <div class="locations">
