add promotion countdown timer

--- a/index.html
+++ b/index.html
@@ -20,6 +20,42 @@
       <!-- main -->
       <main role="main" class="main">
         <div class="container">
+          <div class="promotion">
+            <h2>you buy it by the box</h2>
+            <p>
+              choose 7-8 products of your liking and have it delivered to your
+              door as often as you want. your pick. every time.
+            </p>
+
+            <div class="promotion-box">
+              <div class="promotion-banner">
+                <div class="banner">
+                  <h5>build you box</h5>
+                </div>
+                <div class="banner">
+                  <h5>build you box</h5>
+                </div>
+                <div class="banner">
+                  <h5>build you box</h5>
+                  <p>we ship overnight</p>
+                </div>
+              </div>
+              <div id="promotion-timer">
+                <div>
+                  <span class="hours"></span>
+                </div>
+                <div>
+                  <span class="minutes"></span>
+                </div>
+                <div>
+                  <span class="seconds"></span>
+                </div>
+              </div>
+            </div>
+
+            <a href="#" class="btn-link">shop the menu</a>
+          </div>
+
           <div class="banner-slider">
             <div class="slider-content">
               <div class="slide fade">
