created navigation & mega menu

--- a/index.html
+++ b/index.html
@@ -17,6 +17,66 @@
           >
         </p>
       </div>
+
+      <div class="navbar">
+        <div class="header-box">
+          <a href="/login">login</a>
+          <div class="menu">
+            <div>
+              <div class="item-dropdown">
+                <button class="item-link">
+                  shop
+                </button>
+                <div class="menu-dropdown">
+                  <div class="menu-flex">
+                    <div class="menu-box">
+                      <h3>drinks</h3>
+                      <a href="#">all</a>
+                      <a href="#">juices</a>
+                      <a href="#">smoothies</a>
+                      <a href="#">coffee</a>
+                      <a href="#">water</a>
+                    </div>
+                    <div class="menu-box">
+                      <h3>goods</h3>
+                      <a href="#">all</a>
+                      <a href="#">coffees</a>
+                      <a href="#">snacks</a>
+                    </div>
+                    <div class="menu-box">
+                      <h3>boxes</h3>
+                      <a href="#">all</a>
+                      <a href="#">faviorites box</a>
+                      <a href="#">sweet cream box</a>
+                    </div>
+                    <div class="menu-box">
+                      <h3>cleanses</h3>
+                      <a href="#">all</a>
+                      <a href="#">soft cleanses</a>
+                      <a href="#">hard cleanses</a>
+                    </div>
+                  </div>
+                </div>
+                </div>
+              <a href="/cleanses">cleanses</a>
+              <a href="/box">build a box</a>
+            </div>
+
+            <div>
+              <a href="/juice">juice</a>
+              <a href="/box">served here</a>
+            </div>
+
+            <div>
+              <a href="/box">the unconventional</a>
+              <a href="/about">who we are</a>
+            </div>
+          </div>
+
+          <a href="/cart">cart</a>
+        </div>
+      </div>
+
       <!-- main -->
       <main role="main" class="main">
         <div class="container">
