--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Wireframe6</title>
+    <title>Shopify Wireframe</title>
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
@@ -57,7 +57,7 @@
                     </div>
                   </div>
                 </div>
-                </div>
+              </div>
               <a href="/cleanses">cleanses</a>
               <a href="/box">build a box</a>
             </div>
